<resources>
    <string name="app_name">BookStores</string>
    <string name="title_home">Home</string>
    <string name="title_book">Book</string>
    <string name="title_saved">Saved</string>
    <string name="title_setting">Setting</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">Sign Up</string>
    <string name="all_your_favourites_book_in_one_place">All your favourites book in one place, read any book, staying at home, on travelling, or anywhere else</string>
    <string name="we_provide_you_with_all_your_favourite_books">We provide you with all your favourite books in one place and you can access them anytime and anywhere</string>
    <string name="reading_is_filling_the_emptiness_of_your_heart">"Reading is filling the emptiness of your heart and making you smarter.We would like to offer you with our best books "</string>
    <string name="todo">TODO</string>
    <string name="welcome_back_bunny">Welcome back, Bunny!</string>
    <string name="what_do_you_want_to_read_today">What do you want to read today?</string>
    <string name="search">Search</string>
</resources>